@@ -1,6 +1,7 @@
 typedef struct GitFdwExecutionState
 {
 	char	   *path;
+	char	   *branch;
 	List	   *options;
 	git_repository *repo;
 	int passes;
