@@ -5,6 +5,7 @@ struct GitFdwOption {
 
 // Only allow setting the repository's path
 static const struct GitFdwOption valid_options[] = {
-	{"path", ForeignTableRelationId},
-	{NULL, InvalidOid}
+	{"path",   ForeignTableRelationId, false},
+	{"branch", ForeignTableRelationId, false},
+	{NULL,     InvalidOid, false}
 };
