@@ -1,6 +1,7 @@
 typedef struct GitFdwPlanState
 {
 	char	   *path;
+	char	   *branch;
 	List	   *options;
 	BlockNumber pages;
 	double	    ntuples;
