@@ -7,6 +7,7 @@
 ## Updates
 
 * Add support for new columns and rework others
+* Add a foreign-table-level option for selecting the target branch
 
 # Release 1.0.0
 
